# GenFreqs

./: AtomicMasses.h  CMakeLists.txt  README.md  constants.h  declare.h  funcs.cc  main.cc  run_cmake
data/3c1b/: freqs.txt
data/benzene/: freqs.txt
data/water/: freqs.txt  h2o_hessian.txt
